# QCatch

./: .cruft.json  .gitignore  00  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  qcatch_conda_env.yml  release_PyPI.sh  sitemap.xml
.github/workflows/: build.yaml  deploy_docs.yaml  test.yaml
QCatch/: convert_plots.py  input_processing.py  main.py  plots_tables.py  utils.py
api/: index.html
changelog/: index.html
contributing/: index.html
demo/: demo.html  demo_low_depth.html
demo/demo/: index.html
docs/: faq.md  index.md
docs/demo/: demo.html  demo_low_depth.html
faq/: index.html
qcatch/: __init__.py  convert_plots.py  convert_to_html.py  input_processing.py  main.py  plots_tables.py  utils.py
qcatch/find_retained_cells/: cell_calling.py  run_cell_calling.py
qcatch/templates/: report_template.html
references/: index.html
resources/: id2name_registry.json
search/: search_index.json
src/qcatch/: api.py  convert_to_html.py  input_processing.py  logger.py  main.py  plots_tables.py  utils.py
src/qcatch/find_retained_cells/: cell_calling.py  run_cell_calling.py
src/qcatch/templates/: report_template.html
tests/: test_qcatch.py
